Task 6: added catalog REST API, swagger doc serving
